# ai-agenti

./: .gitignore  README.md
1.lekcia/: poznamky
1.lekcia/FirstReactAgent/: README.md  main.py  pyproject.toml
1.lekcia/FirstReactAgent/classes/: ReactAgent.py
1.lekcia/FirstReactAgent/functions/: openai.py
1.lekcia/FirstReactAgent/tools/: definition.py  implementation.py  mapper.py
10.lekcia/: .gitignore  README.md  pyproject.toml
10.lekcia/ppo_approach/: README.md
10.lekcia/ppo_approach/improved/: improved_ppo_agent.py  run_improved_ppo.py  train_improved_ppo.py
10.lekcia/ppo_approach/shared/: grid_env.py  ppo_agent.py
10.lekcia/ppo_approach/simple/: README.md  robust_training.py  run_ppo.py
10.lekcia/q-learning/: README.md
10.lekcia/q-learning/conditional/: goal_conditioned_agent.py  grid_environment.py  run_goal_conditioned.py  train_goal_conditioned.py
10.lekcia/q-learning/simple/: q_agent.py  run.py  train.py
4.lekcia/: SimpleOrderAssistant.json  docker-compose.yml
7.lekcia/: Readme.md  docker-compose.yml
7.lekcia/core/: .gitignore  Dockerfile  main.py  pyproject.toml  web-ui.py
7.lekcia/core/agents/: dataEnrichment.py  planner.py  researcher.py  speaker.py  supervisor.py
7.lekcia/core/graphs/: graph.py
7.lekcia/core/nodes/: dataEnrichment_node.py  executor_node.py  planner_node.py  researcher_node.py  speaker_node.py  supervisor_node.py
7.lekcia/core/shared/: llm.py  state.py  visualizer.py
7.lekcia/core/templates/: index.html
7.lekcia/mcps/researcher/: Dockerfile  main.py
7.lekcia/mpcs/researcher/: main.py  pyproject.toml
